background images positoned and added

--- a/style.css
+++ b/style.css
@@ -14,17 +14,35 @@ body{
     display: inline-block;
     color: white;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    height: 30px;
-    padding-left: 30px;
-    padding-top: 0px;
-    font-weight: bolder;
+    margin-top: 0;
+    padding-left: 30px; 
+    font-weight: bolder; 
     font-size: 1.5em;
-}
+} 
 /* the header css */
 .header{
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    height: auto;
     width: 100%;
+    padding-top: 50px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    height: auto;
+}
+#h1{
+    padding-top: 17%;
+    font-size: 4em;
+    font-weight: bolder;
+    font-family: 'Times New Roman', Times, serif;
+    font-style: italic;
+}
+#p1{
+    padding-bottom: 17%;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-style: italic;
+    font-size: 20px;
+    color: aliceblue;
 }
