--- a/style.css
+++ b/style.css
@@ -29,20 +29,39 @@ body{
     text-align: center;
     margin-left: auto;
     margin-right: auto;
-    display: block;
-    height: auto;
 }
 #h1{
-    padding-top: 17%;
+    padding-top: 15%;
     font-size: 4em;
     font-weight: bolder;
     font-family: 'Times New Roman', Times, serif;
     font-style: italic;
 }
 #p1{
-    padding-bottom: 17%;
+    padding-bottom: 15%;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-style: italic;
     font-size: 20px;
     color: aliceblue;
+}
+.info{
+    float: right;
+    padding-right: 20px;
+    padding-left: 10px;
+    text-align: initial;
+    background-color:whitesmoke;
+    margin-right: 10px;
+}
+h2{
+    background-color: red;
+    border-radius: 30px;
+}
+
+
+/*  PIZZA OFFER DESCRIPTION */
+.container{
+    margin-top: 30px;
+}
+.row{
+    justify-content:space-evenly;
 }
