--- a/style.css
+++ b/style.css
@@ -6,19 +6,37 @@ body{
 .menu{
     background-color: black;
     position: fixed;
+    z-index: 2;
 }
 .menulist{
     list-style-type: none;
+    padding-top: 15px;
 }
 .menulist li{
     display: inline-block;
     color: white;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    margin-top: 0;
     padding-left: 30px; 
     font-weight: bolder; 
     font-size: 1.5em;
 } 
+.order{
+    float: right;
+    padding-right: 20px;
+    background-color: red;
+}
+a{
+    color: white;
+}
+.menulist a:hover{
+    background-color: green;
+}
+.menulist a:active{
+    background-color: green;
+}
+.menulist a:visited{
+    background-color:red;
+}
 /* the header css */
 .header{
     background-position: center;
@@ -51,6 +69,7 @@ body{
     text-align: initial;
     background-color:whitesmoke;
     margin-right: 10px;
+    opacity: 90%;
 }
 h2{
     background-color: red;
@@ -64,4 +83,50 @@ h2{
 }
 .row{
     justify-content:space-evenly;
+}
+
+/* THE FOOTER */
+footer{
+    text-align: center;
+    background-color: black;
+    color: white;
+}
+
+/* FROM HERE WE START THE MENU DESIGN */
+.menu-file{
+    margin-top: 100px;
+    text-align: center;
+}
+.menuhead{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-style: italic;
+    font-size: 1.5em;
+    text-decoration: underline;
+    width: 80%;
+    background-color: rosybrown;
+    border-radius: 12px;
+    
+}
+.toppings{
+    float: right;
+    width: 30%;
+}
+.products {
+    width: 70%;
+}
+.products h3{
+    font-style: italic;
+    color:green;
+}
+.toppings{
+    background-color: beige;
+}
+.toppings h3{
+    background-color: rosybrown;
+    text-align: center;
+    border-radius: 12px;
+    text-decoration: underline;
+}
+.topList{
+    color: red;
 }
