--- a/style.css
+++ b/style.css
@@ -195,3 +195,28 @@ select{
     border-radius: 30px;
     padding-right: 10px;
 }
+.pName{
+    display: none;
+}
+.pCrust{
+    display: none;
+}
+.pToppings{
+    display: none;
+}
+.pSize{
+    display: none;
+}
+
+/* Order  total table */
+.orderTable{
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 20px;
+    will-change: 100%;
+}
+.tr{
+    padding-left: 30px;
+    background-color: gray;
+}   
